prettying up user list, adding to readme

--- a/ui/src/app/chat/chat.component.html
+++ b/ui/src/app/chat/chat.component.html
@@ -1,19 +1,20 @@
 <div class="row bottom-margin">
-    <div class="col-md-10">
-        <h1>Threaded messages</h1>
-        <div *ngFor="let comment of comments"
-        class="card">
-            <app-comment [comment]="comment" (replyingEvent)="setIsReplying($event)"></app-comment>
-        </div>
+  <div class="col-md-10">
+    <h1>Threaded messages</h1>
+    <div *ngFor="let comment of comments" class="card">
+      <app-comment [comment]="comment" (replyingEvent)="setIsReplying($event)"></app-comment>
     </div>
-    <div class="col-md-2">
-        <h1>Users</h1>
-        <ul>
-            <li *ngFor="let user of users">{{user.name}}</li>
-        </ul>
+  </div>
+  <div class="col-md-2">
+    <div class="card">
+      <div class="card-block">
+        <h4 class="card-title">Users</h4>
+          <dd *ngFor="let user of users">{{user.name}}</dd>
+      </div>
     </div>
+  </div>
 </div>
 <nav *ngIf="!topParentId && !clearTopReply" class="navbar navbar-fixed-bottom navbar-light bg-faded">
-    <app-markdown-edit (textEvent)="setTopReply($event)" [rows]="1"></app-markdown-edit>
-    <button (click)="sendTopReply()" class="btn btn-primary-outline pull-xs-right special-nav-button" type="submit">Send</button>
+  <app-markdown-edit (textEvent)="setTopReply($event)" [rows]="1"></app-markdown-edit>
+  <button (click)="sendTopReply()" class="btn btn-primary-outline pull-xs-right special-nav-button" type="submit">Send</button>
 </nav>
