Started to add discussion card, with views and all

--- a/ui/src/app/chat/chat.component.html
+++ b/ui/src/app/chat/chat.component.html
@@ -1,6 +1,35 @@
 <div class="row bottom-margin">
   <div class="col-md-10">
-    <h1>Threaded messages</h1>
+    <div class="card">
+      <div class="card-block">
+        <h2 class="card-title">{{discussion?.title}}
+          <a *ngIf="discussion?.link" href="{{discussion?.link}}" target="_blank"><small><i class="fa fa-fw fa-external-link" aria-hidden="true"></i></small></a>
+        </h2>
+        <p *ngIf="discussion?.text" class="card-text"[innerHTML]="discussion.text | markdown"></p>
+        <p class="text-muted">created by {{discussion?.userName}}</p>
+        <ul *ngIf="discussion?.tags" class="list-inline">tags:
+          <li class="label label-default list-inline-item" *ngFor="let tag of discussion?.tags">
+            <a class="link-unstyled" href="{{tag.id}}">{{tag.name}}</a>
+          </li>
+        </ul>
+      
+      
+        <ul class="list-inline">
+          <li *ngIf="discussion?.private" class="label label-danger list-inline-item">Private</li>
+          <li class="text-primary list-inline-item">{{discussion?.userName}}</li>
+          <li *ngIf="discussion?.avgRank" class="label label-pill label-default list-inline-item">{{discussion?.avgRank}}</li>
+          <li *ngIf="discussion?.userRank" class="label label-pill label-info list-inline-item">{{discussion?.userRank}}</li>
+          <li *ngIf="discussion?.numberOfVotes" class="text-muted list-inline-item"><small>{{discussion?.numberOfVotes}} votes</small></li>
+          <li *ngIf="discussion?.link" class="list-inline-item"><a href="{{discussion?.link}}" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+          <li *ngIf="!discussion?.modified" class="text-muted list-inline-item"><small>created {{discussion?.created | moment}}</small></li>
+          <li *ngIf="discussion?.modified" class="text-muted list-inline-item"><small><i>modified {{discussion?.modified | moment}}</i></small></li>
+
+        </ul>
+
+        </div>
+  
+
+    </div>
     <div *ngFor="let comment of comments" class="card">
       <app-comment [comment]="comment" (replyingEvent)="setIsReplying($event)"></app-comment>
     </div>
@@ -9,7 +38,7 @@
     <div class="card">
       <div class="card-block">
         <h4 class="card-title">Users</h4>
-          <dd *ngFor="let user of users">{{user.name}}</dd>
+        <dd *ngFor="let user of users">{{user.name}}</dd>
       </div>
     </div>
   </div>
