--- a/ui/src/app/chat/chat.component.scss
+++ b/ui/src/app/chat/chat.component.scss
@@ -14,3 +14,12 @@ app-markdown-edit {
 .bottom-margin {
   margin-bottom: 90px;
 }
+
+.fa {
+  vertical-align: middle
+}
+
+.link-unstyled {
+  color: inherit;
+  text-decoration: inherit;
+}
