Got discussion voting working

--- a/ui/src/app/chat/chat.component.html
+++ b/ui/src/app/chat/chat.component.html
@@ -16,7 +16,7 @@
       
         <ul class="list-inline">
           <li *ngIf="discussion?.private" class="label label-danger list-inline-item">Private</li>
-          <li class="text-primary list-inline-item">{{discussion?.userName}}</li>
+          <li *ngIf="userService.getUser().id != discussion?.userId" role="button" class="list-inline-item" (click)="toggleShowVoteSlider()"><i class="fa fa-fw fa-star-half-o"></i></li>
           <li *ngIf="discussion?.avgRank" class="label label-pill label-default list-inline-item">{{discussion?.avgRank}}</li>
           <li *ngIf="discussion?.userRank" class="label label-pill label-info list-inline-item">{{discussion?.userRank}}</li>
           <li *ngIf="discussion?.numberOfVotes" class="text-muted list-inline-item"><small>{{discussion?.numberOfVotes}} votes</small></li>
@@ -25,6 +25,9 @@
           <li *ngIf="discussion?.modified" class="text-muted list-inline-item"><small><i>modified {{discussion?.modified | moment}}</i></small></li>
 
         </ul>
+        <div *ngIf="showVoteSlider">
+          <input [value]="discussion?.userRank" (mouseup)="saveDiscussionRank($event.target.value)" (input)="updateDiscussionRank($event.target.value)" type="range" min="0" max="100" step="1" (value)="discussion?.userRank"/>
+        </div>
 
         </div>
   
