--- a/ui/src/app/styles/vendor.scss
+++ b/ui/src/app/styles/vendor.scss
@@ -1,3 +1,5 @@
 @import '../../../node_modules/bootstrap/scss/bootstrap-flex';
 @import './slider';
+@import '../../../node_modules/angular2-toaster/lib/toaster';
+
 /*@import '../../../node_modules/font-awesome/scss/font-awesome';*/
