--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,10 @@
     <a class="navbar-brand" [routerLink]="['Home']">Flow</a>
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['Discussion', {discussionId: 1}]">Heh <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['Discussion', {discussionId: 1}]">Heh</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['Tag', {tagId: 1}]">tag 1</a>
       </li>
       <li class="nav-item">
         <form class="form-inline">
