--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -17,6 +17,9 @@
           <button class="btn btn-primary-outline" type="submit">Search</button>
         </form>
       </li>
+      <li class="nav-item">
+        <button class="btn btn-link link-unstyled" (click)="createDiscussion()">Create discussion</button>
+      </li>
     </ul>
     <ul class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
