--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -1,36 +1,62 @@
 <div class="card">
   <div class="card-block">
-    <h2 *ngIf="!discussion?.link" class="card-title">{{discussion?.title}}
-        <small *ngIf="discussion && isCreator()"><i class="fa fa-fw fa-edit"></i></small>
-    </h2>
-    <a *ngIf="discussion?.link" href="{{discussion?.link}}" target="_blank" class="link-unstyled">
-      <h2 class="card-title">{{discussion?.title}}
-        <small *ngIf="discussion && isCreator()"><i class="fa fa-fw fa-edit"></i></small>
+    <div *ngIf="!editMode">
+      <h2 *ngIf="!discussion?.link" class="card-title">{{discussion?.title}}
+        <small *ngIf="discussion && isCreator()"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()"></i></small>
       </h2>
-    </a>
-    <p *ngIf="discussion?.text" class="card-text" [innerHTML]="discussion.text | markdown"></p>
-    <small>
-          <ul *ngIf="discussion?.tags" class="list-inline">tags:
-            <li class="label label-default list-inline-item" *ngFor="let tag of discussion?.tags">
-              <a class="link-unstyled" [routerLink]="['/Tag', {tagId: tag.id}]">{{tag.name}}</a>
-            </li>
-          </ul>
-    </small>
-    <small class="text-muted">created
-          <span *ngIf="!discussion?.modified">{{discussion?.created | moment}}</span>
-          <span *ngIf="discussion?.modified"><i>modified {{discussion?.modified | moment}}</i></span>
-         by {{discussion?.userName}}
-    </small>
-    <ul class="list-inline">
-      <li *ngIf="discussion?.private" class="label label-danger list-inline-item">Private</li>
+      <h2 *ngIf="discussion?.link" class="card-title">
+        <a href="{{discussion?.link}}" target="_blank" class="link-unstyled">{{discussion?.title}} </a>
+        <small *ngIf="discussion && isCreator()"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()"></i></small>
+       
+      </h2>
+      <p *ngIf="discussion?.text" class="card-text" [innerHTML]="discussion.text | markdown"></p>
+      <small>
+            <ul *ngIf="discussion?.tags" class="list-inline">tags:
+              <li class="label label-default list-inline-item" *ngFor="let tag of discussion?.tags">
+                <a class="link-unstyled" [routerLink]="['/Tag', {tagId: tag.id}]">{{tag.name}}</a>
+              </li>
+            </ul>
+      </small>
+      <small class="text-muted">
+            <span *ngIf="!discussion?.modified">created {{discussion?.created | moment}}</span>
+            <span *ngIf="discussion?.modified"><i>modified {{discussion?.modified | moment}}</i></span>
+          by {{discussion?.userName}}
+      </small>
+      <ul class="list-inline">
+        <li *ngIf="discussion?.private" class="label label-danger list-inline-item">Private</li>
       <li *ngIf="discussion && !isCreator()" role="button" class="list-inline-item" (click)="toggleShowVoteSlider()"><i class="fa fa-fw fa-star-half-o"></i></li>
-      <li *ngIf="discussion?.avgRank" class="label label-pill label-default list-inline-item">{{discussion?.avgRank}}</li>
-      <li *ngIf="discussion?.userRank" class="label label-pill label-info list-inline-item">{{discussion?.userRank}}</li>
-      <li *ngIf="discussion?.numberOfVotes" class="text-muted list-inline-item"><small>{{discussion?.numberOfVotes}} votes</small></li>
+      <li *ngIf="discussion?.avgRank" class="label label-pill label-default list-inline-item">  {{discussion?.avgRank}}</li>
+      <li *ngIf="discussion?.userRank" class="label label-pill label-info list-inline-item">  {{discussion?.userRank}}</li>
+      <li *ngIf="discussion?.numberOfVotes" class="text-muted list-inline-item"><small> {{discussion?.numberOfVotes}} votes</small></li>
       <li *ngIf="discussion?.link" class="list-inline-item"><a href="{{discussion?.link}}" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-    </ul>
-    <div *ngIf="showVoteSlider">
+      <li class="list-inline-item" role="button"><i class="fa fa-fw fa-comments-o" [routerLink]="['/Discussion', {discussionId: discussion?.id}]"></i></li>
+      </ul>
+
+      <div *ngIf="showVoteSlider">
       <input [value]="discussion?.userRank" (mouseup)="saveDiscussionRank($event.target.value)" (input)="updateDiscussionRank($event.target.value)" type="range" min="0" max="100" step="1" (value)="discussion?.userRank" />
+      </div>
+    </div>
+    <div *ngIf="editMode">
+
+      <div class="form-group row">
+        <label class="col-sm-2 form-control-label">Title</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="discussion.title" class="form-control" maxlength="140"/>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-2 form-control-label">Link</label>
+        <div class="col-sm-10">
+          <input [(ngModel)]="discussion.link" class="form-control"/>
+        </div>
+      </div>
+    
+      <app-markdown-edit [inputText]="discussion.text" (textEvent)="setEditText($event)"></app-markdown-edit>
+      <br>
+      <div class="btn-group" role="group">
+        <button (click)="saveDiscussion()" class="btn btn-primary">Save</button>
+        <button (click)="toggleEditMode()" class="btn btn-danger">Cancel</button>
+      </div>
     </div>
   </div>
 </div>
