--- a/ui/src/app/components/chat-list/chat-list.component.html
+++ b/ui/src/app/components/chat-list/chat-list.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-2 col-xs-12">
+      <ul *ngIf="userService?.getFavoriteDiscussions()" class="list-group">
+        <li *ngFor="let discussion of userService.getFavoriteDiscussions()" class="list-group-item">
+          <a [routerLink]="['/Discussion', {discussionId: discussion.id}]">{{discussion.title}}</a><span class="fa fa-fw fa-remove pull-xs-right"></span>
+        </li>
+      </ul>
+    </div>
+    <div class="col-lg-10 col-xs-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
