--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -1,11 +1,11 @@
 <div class="row bottom-margin">
-  <div class="col-md-10">
+  <div class="col-xs-12 col-lg-10">
     <app-discussion-card [discussion]="discussion"></app-discussion-card>
     <div *ngFor="let comment of comments" class="card">
       <app-comment [comment]="comment" (replyingEvent)="setIsReplying($event)"></app-comment>
     </div>
   </div>
-  <div class="col-md-2">
+  <div class="col-xs-12 col-lg-2">
     <div class="card">
       <div class="card-block">
         <h4 class="card-title">Users</h4>
