--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
-<button class="btn btn-primary" (click)="popToast()">pop toast</button>
-
-<hr>
-<div class="card-columns">
-	<app-discussion-card *ngFor="let discussion of discussions" [discussion]="discussion"></app-discussion-card>
+<div class="container">
+  <button class="btn btn-primary" (click)="popToast()">pop toast</button>
+  <hr>
+  <div class="card-columns">
+    <app-discussion-card *ngFor="let discussion of discussions"
+      [discussion]="discussion"></app-discussion-card>
+  </div>
 </div>
-
-
