--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button class="btn btn-primary" (click)="popToast()">pop toast</button>
+	<h3>New Discussions</h3>
   <hr>
   <div class="card-columns">
     <app-discussion-card *ngFor="let discussion of discussions"
