--- a/ui/src/app/components/tag/tag.component.html
+++ b/ui/src/app/components/tag/tag.component.html
@@ -1,5 +1,8 @@
-<h2 *ngIf="tag">#{{tag.name}}</h2>
-<hr>
-<div class="card-columns">
-	<app-discussion-card *ngFor="let discussion of discussions" [discussion]="discussion"></app-discussion-card>
+<div class="container">
+  <h2 *ngIf="tag">#{{tag.name}}</h2>
+  <hr>
+  <div class="card-columns">
+    <app-discussion-card *ngFor="let discussion of discussions"
+      [discussion]="discussion"></app-discussion-card>
+  </div>
 </div>
