--- a/ui/src/app/components/comment/comment.component.html
+++ b/ui/src/app/components/comment/comment.component.html
@@ -1,32 +1,36 @@
-<div [id]="'comment_' + comment.id" class="card-block"> 
-	<ul class="list-inline">
-		<li class="text-muted list-inline-item" 
-			role="button" 
-			(click)="collapsed = !collapsed">{{collapseText()}}</li>
-		<li class="text-primary list-inline-item">{{comment.userName}}</li>
-		<li *ngIf="comment.avgRank" class="label label-pill label-default list-inline-item">{{comment.avgRank}}</li>
-		<li *ngIf="rank" class="label label-pill label-info list-inline-item">{{rank}}</li>
-		<li *ngIf="comment.avgRank" class="text-muted list-inline-item"><small>{{comment.numberOfVotes}} votes</small></li>
-		<li *ngIf="!comment.modified" class="text-muted list-inline-item"><small>{{comment.created | moment}}</small></li>
-		<li *ngIf="comment.modified" class="text-muted list-inline-item"><small><i>modified {{comment.modified | moment}}</i></small></li>
-	</ul>
+<div [id]="'comment_' + comment.id" class="card-block">
+  <ul class="list-inline">
+    <li class="text-muted list-inline-item" role="button"
+      (click)="collapsed = !collapsed">{{collapseText()}}</li>
+    <li class="text-primary list-inline-item">{{comment.userName}}</li>
+    <li *ngIf="comment.avgRank" class="label label-pill label-default list-inline-item">{{comment.avgRank}}</li>
+    <li *ngIf="rank" class="label label-pill label-info list-inline-item">{{rank}}</li>
+    <li *ngIf="comment.avgRank" class="text-muted list-inline-item"><small>{{comment.numberOfVotes}} votes</small></li>
+    <li *ngIf="comment.deleted" class="text-muted list-inline-item"><small><i>deleted {{comment.modified | moment}}</i></small></li>
+    <span *ngIf="!comment.deleted">
+      <li *ngIf="!comment.modified" class="text-muted list-inline-item"><small>{{comment.created | moment}}</small></li>
+      <li *ngIf="comment.modified" class="text-muted list-inline-item"><small><i>modified {{comment.modified | moment}}</i></small></li>
+    </span>
+  </ul>
 </div>
 <div *ngIf="!collapsed" class="card-block">
-
-	<div *ngIf="!showEdit" class="card-text" 
-		[class.mark]="isCommentNew()" [innerHTML]="comment.text | markdown">
-	</div>
-	<div *ngIf="showEdit" class="card-text">
-		<app-markdown-edit [inputText]="comment.text" (textEvent)="setEdit($event)"></app-markdown-edit>
-		<br>
-		<div class="btn-group" role="group">
-   		<button class="btn btn-primary" (click)="editMessage()">Edit</button>
-    	<button class="btn btn-danger" (click)="hideEdit()">Cancel</button>
-   	</div>
-	</div>
-	
-	<small *ngIf="!showReply && !showEdit">
+  <div *ngIf="!comment.deleted">
+    <div *ngIf="!showEdit" class="card-text"
+      [class.mark]="isCommentNew()" [innerHTML]="comment.text | markdown">
+    </div>
+  </div>
+  <div *ngIf="showEdit" class="card-text">
+    <app-markdown-edit [inputText]="comment.text"
+      (textEvent)="setEdit($event)"></app-markdown-edit>
+    <br>
+    <div class="btn-group" role="group">
+      <button class="btn btn-primary" (click)="editMessage()">Edit</button>
+      <button class="btn btn-danger" (click)="hideEdit()">Cancel</button>
+    </div>
+  </div>
+  <small *ngIf="!showReply && !showEdit">
 		<ul class="list-inline">
+			<span *ngIf="!comment.deleted">
 			<li *ngIf="userService.getUser().id != comment.userId" role="button" class="list-inline-item" (click)="toggleShowVoteSlider()">
 				<i class="fa fa-fw fa-star-half-o"></i>
 			</li>
@@ -36,6 +40,10 @@
 			<li role="button" *ngIf="editable" (click)="toggleShowEdit()" class="list-inline-item">
 				<i class="fa fa-fw fa-edit"></i>
 			</li>
+			<li role="button" *ngIf="editable" (click)="deleteComment()" class="list-inline-item">
+				<i class="fa fa-fw fa-remove"></i>
+			</li>
+			</span>
 			<li *ngIf="comment.parentId" role="button" class="list-inline-item">
 				<i [routerLink]="['/Discussion', {discussionId: comment.discussionId}, 'ChatSub', {commentId: comment.parentId}]" class="fa fa-fw fa-level-up"></i>
 			</li>
@@ -47,18 +55,21 @@
 			</li>
 		</ul>
 	</small>
-	<div *ngIf="showVoteSlider">
-		<input [value]="rank" (mouseup)="saveRank($event.target.value)" (input)="updateRank($event.target.value)" type="range" min="0" max="100" step="1" (value)="rank"/>
-	</div>
-	<fieldset *ngIf="showReply" class="form-group">
-    	<app-markdown-edit (textEvent)="setReply($event)"></app-markdown-edit>
-    	<br>
-    	<div class="btn-group" role="group">
-    		<button class="btn btn-primary" (click)="sendMessage()">Send</button>
-    		<button class="btn btn-danger" (click)="hideReply()">Cancel</button>
-    	</div>
-    </fieldset> 
-    <div class="card" *ngFor="let emb of comment.embedded">
-       	<app-comment [comment]="emb" (replyingEvent)="setIsReplying($event)"></app-comment>
+  <div *ngIf="showVoteSlider">
+    <input [value]="rank" (mouseup)="saveRank($event.target.value)"
+      (input)="updateRank($event.target.value)"
+      type="range" min="0" max="100" step="1"
+      (value)="rank" />
+  </div>
+  <fieldset *ngIf="showReply" class="form-group">
+    <app-markdown-edit (textEvent)="setReply($event)"></app-markdown-edit>
+    <br>
+    <div class="btn-group" role="group">
+      <button class="btn btn-primary" (click)="sendMessage()">Send</button>
+      <button class="btn btn-danger" (click)="hideReply()">Cancel</button>
     </div>
+  </fieldset>
+  <div class="card" *ngFor="let emb of comment.embedded">
+    <app-comment [comment]="emb" (replyingEvent)="setIsReplying($event)"></app-comment>
+  </div>
 </div>
